--- a/css/custom.css
+++ b/css/custom.css
@@ -134,7 +134,7 @@ section#two p.active{
 section#three {
   height:100%;
   margin-bottom:700px;
-  background-image: url(../img/water.png);
+  background-image: url(../img/cloud3.png);
   background-size: cover;
  }
 section#three-fade{
