--- a/css/custom.css
+++ b/css/custom.css
@@ -446,7 +446,7 @@ p.quote{
 
 /*past2*/
 section#past2-one{
-  background-image: url(../img/baby2.jpg);
+  color: #efefef;
   background-repeat: no-repeat;
   background-size: 70%;
   background-position: bottom left;
